# LTRT

./: .gitignore  README.md  pyproject.toml
experimental/: rerun_test.py
ltrt/: __init__.py  __main__.py
ltrt.egg-info/: PKG-INFO  requires.txt
ltrt/backend/: realtime_pipeline.py  run_realtime.py  tracking_process.py
ltrt/gui/: main_window.py
ltrt/gui/visualization/: skeleton_plotter.py
ltrt/mock_data/: mock_multiframe_payload.py
ltrt/system/: path_utilities.py
