[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ltrt"
readme = "README.md"
version = "0.0.1"
description = "Let's Try Real Time"
authors = [
    { name = "Philip"},
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
keywords = [
    "real time",
    "motion capture",
]

dependencies = [
    "web_of_cams@git+https://github.com/philipqueen/web_of_cams",
    "skellyforge==2023.12.1005",
    "ajc27_freemocap_blender_addon==2023.10.1016",
    "opencv-contrib-python==4.8.*",
    "aniposelib==0.4.3",
    "pydantic==1.*",
    "skellytracker==2023.12.1006",
    "PySide6==6.6.*",
]

requires-python = ">=3.9,<3.12"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest", "pytest-cov", "flit", "flake8", "flake8-bugbear", "flake8-bandit"]
