[project]
name = "ltrt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10s"
dependencies = [
    "aniposelib>=0.7.0",
    "skellycam",
    "skellyforge>=2024.8.1008",
    "skellytracker>=2024.9.1019",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.8",
]

[tool.uv.sources]
skellycam = { git = "https://github.com/freemocap/skellycam", rev = "jon/react-electron" }
