[project]
name = "ltrt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aniposelib>=0.7.0",
    "freemocap==1.4.*",
    "skellycam",
    "skellyforge",
    "skellytracker[all]",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.8",
]

[tool.uv.sources]
skellycam = { git = "https://github.com/freemocap/skellycam", rev = "jon/development" }
skellytracker = { git = "https://github.com/freemocap/skellytracker", rev =  "jon/development" }#rev = "philip/process_single_frame_in_recorder" }
skellyforge = { git = "https://github.com/freemocap/skellyforge" }
